# vulkan-tutorial

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
assets/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/: simple.rs
scripts/: build-shaders.sh
src/: buffer.rs  command_pool.rs  context.rs  debugging.rs  device.rs  instance.rs  lib.rs  pipeline.rs  render_pass.rs  renderer.rs  surface.rs  swapchain.rs
src/buffers/: staged_static.rs
src/triangle_renderer/: mod.rs
src/vulkan/: mod.rs
src/vulkan/base/: command_pool.rs  debugging.rs  device.rs  frame_buffers.rs  memory.rs  mod.rs  pipeline.rs  surface.rs  swapchain.rs
src/vulkan/base/buffers/: host.rs  immutable.rs  mapped.rs  mod.rs  util.rs
src/vulkan/base/images/: immutable.rs  mod.rs  util.rs
src/vulkan/renderers/: mod.rs  triangle_renderer.rs
