[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
anyhow = "1.0"
tracing = "0.1"
winit = "0.30.0"
ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
